# fish-botai

./: Cargo.toml  Dockerfile  deploy.yml  dialog.json  fly.toml
src/: chat_actor.rs  dialog.rs  handlers.rs  main.rs  models.rs  nlp.rs
static/: index.htm  index.html
