[package]
name = "fish-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
