[package]
name = "fish-botai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"               # Добавляем для работы с акторной моделью
actix-web = "4"
actix-web-actors = "4"       # Для работы с WebSocket‑акторами
actix-files = "0.6"          # Для обслуживания статических файлов
shuttle-actix-web = "0.52"   # Проверьте актуальную версию
shuttle-runtime = "0.52"     # Проверьте актуальную версию
tokio = "1"


